# chra-nf-xl

./: .gitignore  CMakeLists.txt  GGUF_DEPLOYMENT_COMPLETE.md  GGUF_DEPLOYMENT_GUIDE.md  GGUF_MODEL_DOCUMENTATION.md  NeuroForge_Training.ipynb  PHASES.md  PULL_REQUEST.md  QUINTILLION_TRAINING_COMPLETE.md  README.md  TECHNICAL_TRAINING_DEPLOYMENT_GUIDE.md  TECHNICAL_TRAINING_IMPLEMENTATION_SUMMARY.md  TRAINING_COMPLETION_REPORT.md  chra-nf-xl-technical-production.gguf  chra-nf-xl-technical.gguf  comprehensive_training_demonstration.py  create_gguf_model.py  create_production_gguf.py  create_simple_gguf.py  dnr.h  enhanced_ultimate_ai_model_training.py  export_model.py  inference.py  main.cpp  model_info.json  module_registry.json  nca.cpp  nca.h  neuroforge-simulated-model.txt  neuroforge_configurator.py  neuroforge_launcher.py  neuroforge_smoketest.py  neuroforge_training_pipeline.ipynb  page.tsx.b64  quintillion_dataset_generator.py  quintillion_distributed_coordinator.py  quintillion_main.py  quintillion_memory_manager.py  quintillion_token_trainer.py  quintillion_training_curriculum.py  (+9 more)
.github/workflows/: ci.yml
NeuroForge_v0.9_CPU-Windows/config/: system_profile.json
NeuroForge_v0.9_CPU-Windows/models/quantized_weights/: core.pt
agent/: CMakeLists.txt
agent/include/: agent_framework.h
agent/python/: agent_framework_py.cpp
agent/src/: agent_framework.cpp
agent/tests/: test_agent_framework.cpp
bvh/: CMakeLists.txt
bvh/include/: avx2_bhv.h  bhv.h
bvh/python/: bhv_py.cpp
bvh/src/: avx2_bhv.cpp  bhv.cpp
bvh/tests/: test_avx2_bhv.cpp  test_bhv.cpp
bvh/tools/: benchmark.ps1  benchmark.sh
checkpoints/: neuroforge_quantum_distilled.pt
compression/: CMakeLists.txt
compression/include/: compressor.h
compression/python/: compressor_py.cpp
compression/src/: compressor.cpp
compression/tests/: test_compressor.cpp
dnr/: CMakeLists.txt
dnr/python/: rasterize.py
dnr/scripts/: rasterize.py
dnr/src/: dnr.cpp
dnr/tests/: test_dnr.cpp
edgt/: CMakeLists.txt  model.py
edgt/python/: inference.py
edgt/src/: transformer.py
edgt/tests/: test_lm.py
edgt/tools/: demo_text.py  export_onnx.py  train_qat.py
fallback/image_generation/: image_generation.py
fallback/ocr/: ocr.py
fallback/search/: search.py
fallback/tts/: tts.py
gguf_env/: pyvenv.cfg
inference/: CMakeLists.txt  inference.py
memory/: CMakeLists.txt
memory/include/: associative_memory.h
memory/python/: associative_memory_py.cpp
memory/retrieval/: crawler.py  summarizer.py
memory/src/: associative_memory.cpp
memory/tests/: test_associative_memory.cpp
models/: generate-gguf-models.py  gt730-optimization-package.sh
models/chra-nf-xl-base/: config.json  special_tokens_map.json  tokenizer_config.json
models/gguf-gt730-optimized/: README.md  convert-to-gguf.bat  convert-to-gguf.sh  create-placeholder-models.py  gt730-benchmark.sh  gt730-config.json  gt730-inference.bat  gt730-inference.sh  performance-comparison.md
nca/: CMakeLists.txt
nca/include/: nca.h  nca_canvas.h
nca/python/: nca_canvas_py.cpp  nca_py.cpp
nca/src/: nca.cpp  nca_canvas.cpp
nca/tests/: test_nca.cpp  test_nca_canvas.cpp  test_nca_generation.cpp
nca/training/: train.py
overlay/: CMakeLists.txt
overlay/include/: overlay.h
overlay/python/: overlay_py.cpp
overlay/src/: overlay.cpp
overlay/tests/: test_overlay.cpp
packaging/linux/: build_appimage.sh
packaging/macos/: build_app.sh
packaging/windows/: build_installer.ps1
paging/: CMakeLists.txt
paging/include/: paging_system.h
paging/python/: paging_system_py.cpp
paging/src/: paging_system.cpp
paging/tests/: test_paging_system.cpp
profiling/: CMakeLists.txt
profiling/include/: profiler.h
profiling/python/: profiler_py.cpp
profiling/src/: profiler.cpp
profiling/tests/: test_profiler.cpp
python/: neuroforge_py.cpp
quantization/: CMakeLists.txt
quantization/include/: quantizer.h
quantization/python/: quantizer_py.cpp
quantization/src/: quantizer.cpp
quantization/tests/: test_quantizer.cpp
reasoning/: CMakeLists.txt
reasoning/include/: reasoning_engine.h
reasoning/python/: reasoning_engine_py.cpp
reasoning/src/: reasoning_engine.cpp
reasoning/tests/: test_reasoning_engine.cpp
router/: CMakeLists.txt
router/include/: pmr.h  sgr.h
router/model/: train_router.py
router/python/: router_py.cpp  sgr_py.cpp
router/src/: pmr.cpp  sgr.cpp
router/tests/: test_pmr.cpp  test_sgr.cpp
scaling/: CMakeLists.txt
scaling/include/: scaling_engine.h
scaling/python/: scaling_engine_py.cpp
scaling/src/: scaling_engine.cpp
scaling/tests/: test_scaling_engine.cpp
shm/: CMakeLists.txt
shm/python/: shm_py.cpp
shm/src/: shm_index.cpp
shm/tests/: test_shm_index.cpp
shm/tools/: benchmark.ps1  benchmark.sh
src/app/: page.tsx
src/components/: enhanced-ai-interface.tsx  enhanced-omni-interface.tsx  training-dashboard.tsx
src/lib/: ai-training-service.ts  gguf-optimizer.ts  low-end-quantizer.ts  training-datasets.ts  training-pipeline.ts
system/: CMakeLists.txt
system/include/: system_detection.h
system/python/: system_detection_py.cpp
system/src/: system_detection.cpp
system/tests/: test_system_detection.cpp
tests/: test_main.cpp  test_module_loading.cpp  test_offline_mode.py
tools/: Dockerfile  bootstrap.ps1  bootstrap.sh  ci_smoke.ps1  ci_smoke.sh  packaging.ps1  packaging.sh
tools/distill/: distill_student.py  test_distillation.py  train_teacher.py
tools/finetune/: finetune.py
tools/telemetry/: dashboard.json  telemetry.cpp
training/: README.md  train.py  train_text.py
training/data/: canvas.txt  ocr.txt  reasoning.txt  text.txt  tiny_dataset.txt  web_text.txt
training/scripts/: data_preparation.py  download_datasets.py  download_vision_datasets.py  evaluate.py  model_definition.py  train.py  train_vision.py
ultimate_ai_env/: pyvenv.cfg
voice/: CMakeLists.txt
voice/input/: whisper.cpp  whisper_wrapper.cpp  whisper_wrapper.h
voice/output/: tts.py  tts_wrapper.cpp  tts_wrapper.h
voice/python/: voice_py.cpp
voice/tests/: test_voice.cpp
(+15 files in other folders)
